# parser-wb-rust

./: Cargo.toml  Dockerfile  README.md  docker-compose.yml
src/: main.rs  structure.rs  test.rs
