[package]
name = "parser-wb"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
csv = "1.3"
reqwest = "0.12.12" 
tokio = { version = "1", features = ["full"] }
tokio-postgres = { version = "0.7", features = ["with-uuid-1"] }
serde_json = "1.0"
bitvec = "1.0"
futures = "0.3"
fxhash = "0.2.1"
fern = "0.6"
log = "0.4"
chrono = "0.4"